add flask-pyhon to the project, now we can see the web in http://127.0.0.1:xxxx

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>通讯录</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="static/stylesheets/index.css">
+    <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico" media="screen"  />
 </head>
 
 <body>
@@ -57,7 +58,7 @@
     </form>
 
 
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="static/index.js"></script>
 
 </body>
 
