add nginx, uwsgi to the project. Access the index.html by 127.0.0.1:8021 after starting the nginx and uwsgi.ini

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>通讯录</title>
     <link rel="stylesheet" type="text/css" href="static/stylesheets/index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico" media="screen"  />
+    <link rel="shortcut icon" type="image/x-icon" href="./static/images/favicon.ico" media="screen"  />
 </head>
 
 <body>
@@ -42,7 +42,7 @@
     </form>
 
 
-    <script type="text/javascript" src="static/index.js"></script>
+    <script type="text/javascript" src="./static/index.js"></script>
 
 </body>
 
